# example-python-sdk

./: __init__.py  pyproject.toml
.github/workflows/: publish_to_test_pypi.yml
src/example_package_dsetia/: example.py
