[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "example_package_dsetia"
version = "0.0.3"
authors = [
  { name="Divyanshu", email="dsetia@cs.iitr.ac.in" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "requests"
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"
